--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ a:hover {
   opacity: 50%;
 }
 
+/* @media on max width */
 @media only screen and (max-width: 900px) {
   .left {
     width: 100%;
@@ -124,3 +125,9 @@ a:hover {
   }
 }
 
+/* @media on width */
+@media only screen and (max-height: 500px) {
+  .left {
+    top: 25%;
+  }
+}
