home page ADDED:  - responsive to height TODO:  - links to blogs and about

--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ a:hover {
   }
 }
 
-/* @media on width */
+/* @media on height */
 @media only screen and (max-height: 500px) {
   .left {
     top: 25%;
