--- a/style.css
+++ b/style.css
@@ -156,3 +156,12 @@ input[type=submit]:hover {
     width: 75%;
   }
 }
+
+#preloader {
+  background: black url(img/circle-loader-gif-2.gif) no-repeat center;
+  background-size: 15%;
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  z-index: 100;
+}
