--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,11 @@
 <div class="container">
   <div class="navbar">
     <a href="#"><span>GaukeT</span></a>
+    <a href="/projects"><span>Projects</span></a>
   </div>
 
   <div class="content">
-      <h1>Gauke Teijema</h1>
-      <hr>
-      <p>Software developer</p>
-      <!-- <router-outlet></router-outlet> -->
+    <router-outlet></router-outlet>
   </div>
 
   <div class="footer">
