--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -9,7 +9,24 @@
     align-items: center;
 }
 
+.profile > .text {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+}
+
+p {
+    margin: 4px;
+}
+
 img {
     border-radius: 50%;
     width: 12rem;
 }
+
+@media only screen and (max-width: 600px) {
+    .profile {
+      flex-direction: column;
+    }
+  }
