code cleanup + add new projects

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -9,7 +9,7 @@
         <td><a rel="noopener" href="https://github.com/GaukeT/{{ proj.github }}/" title="{{ proj.github }}">
             <i class="fa fa-link"></i>
         </a></td>
-        <td><a rel="noopener" href="https://gauket.github.io/{{ proj.github }}/" title="{{ proj.github }}">
+        <td><a *ngIf="proj.demo" rel="noopener" href="https://gauket.github.io/{{ proj.github }}/" title="{{ proj.github }}">
             <i class="fa fa-link"></i>
         </a></td>
     </tr>
