--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="navbar">
-    <a href="#"><span>GaukeT</span></a>
+    <a href=""><span>GaukeT</span></a>
     <a href="/projects"><span>Projects</span></a>
   </div>
 
