--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -3,13 +3,13 @@
     gap: 2rem;
 }
 
-.profile > .img {
+.img {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.profile > .text {
+.text {
     display: flex;
     flex-flow: column;
     justify-content: center;
@@ -29,4 +29,4 @@ img {
     .profile {
       flex-direction: column;
     }
-  }
+}
