--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="navbar">
-    <a href=""><span>GaukeT</span></a>
-    <a href="/projects"><span>Projects</span></a>
+    <a routerLink="/"><span>GaukeT</span></a>
+    <a routerLink="/projects"><span>Projects</span></a>
   </div>
 
   <div class="content">
