--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="profile">
     <div class="img">
-        <img src="https://avatars.githubusercontent.com/u/44612327">
+        <img alt="img" src="https://avatars.githubusercontent.com/u/44612327">
     </div>
     <div class="text">
         <h1>Gauke Teijema</h1>
