add link behind Leeuwarden

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,9 @@
     <div class="text">
         <h1>Gauke Teijema</h1>
         <hr>
-        <p>Software developer</p>
-        <p><i class="fa fa-map-marker"></i> Leeuwarden, The Netherlands</p>
+        <p>Software Developer</p>
+        <p><a rel="noopener" href="https://www.google.com/maps/place/Leeuwarden" target="_blank" title="Leeuwarden">
+            <i class="fa fa-map-marker"></i> Leeuwarden, The Netherlands
+        </a></p>
     </div>
 </div>
