--- a/styles.css
+++ b/styles.css
@@ -17,11 +17,47 @@ h1 {
 
   background-color: rgba(255, 255, 255, 0.95);
   color: #1A4341;
+  z-index: 3;
 }
 
-p {
-  font-size: clamp(1rem, 4vw, 5rem);
-  visibility: hidden;
+@keyframes rotate {
+  from {
+    rotate: 0deg;
+  }
+  
+  50% {
+    scale: 1 1.5;
+  }
+  
+  to {
+    rotate: 360deg;
+  }
+}
+
+#blob {
+  background-color: white;
+  height: 34vmax;
+  aspect-ratio: 1;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  translate: -50% -50%;
+  border-radius: 50%;
+  background: linear-gradient(to right, aquamarine, powderblue);
+  animation: rotate 20s infinite;
+  opacity: 0.8;
+}
+
+#blur {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  z-index: 2;
+  backdrop-filter: blur(12vmax);
+}
+
+.links {
+  z-index: 3;
 }
 
 a {
@@ -32,5 +68,6 @@ a {
 }
 
 a:hover {
-  opacity: 50%;
+  opacity: 80%;
 }
+
