--- a/css/styles.css
+++ b/css/styles.css
@@ -86,10 +86,12 @@ body[data-nav="true"] > nav > #nav-links {
   transition: transform, background-color;
   transition-timing-function: ease;
   transition-duration: 400ms;
+  opacity: .7;
 }
 
 #nav-toggle:hover {
   transform: translateX(-50%) scale(1.04);
+  opacity: 1;
 }
 
 #nav-toggle:active {
